--- a/assignment 2.css
+++ b/assignment 2.css
@@ -21,7 +21,7 @@ main{
 .box1{
     width: 200px;
     height: 200px;
-    background-image: url(/image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.33\ PM.jpeg);
+    background-image: url(image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.33\ PM.jpeg);
     background-size: cover;
     position: relative;
     left: -280px;
@@ -29,7 +29,7 @@ main{
 .box2{
     width: 200px;
     height: 200px;
-    background-image: url(/image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.33\ PM\ \(1\).jpeg);
+    background-image: url(image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.33\ PM\ \(1\).jpeg);
     background-size: cover;
     position: relative;
     left: -280px;
@@ -41,7 +41,7 @@ main{
 .box3{
     width: 200px;
     height: 200px;
-    background-image: url(/image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.33\ PM\ \(2\).jpeg);
+    background-image: url(image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.33\ PM\ \(2\).jpeg);
     background-size: cover;
     position: relative;
     top: -370px;
@@ -51,7 +51,7 @@ main{
 .box4{
     width: 200px;
     height: 200px;
-    background-image: url(/image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.34\ PM.jpeg);
+    background-image: url(image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.34\ PM.jpeg);
     background-size: cover;
     position: relative;
     top: -330px;
@@ -61,7 +61,7 @@ main{
 .box5{
     width: 300px;
     height: 440px;
-    background-image: url(/image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.34\ PM\ \(1\).jpeg);
+    background-image: url(image/WhatsApp\ Image\ 2022-11-19\ at\ 8.17.34\ PM\ \(1\).jpeg);
     background-size: cover;
     position: absolute;
     top:90px;
